; ModuleID = '/home/carl/AnghaBench/h2o/deps/klib/extr_kurl.c_s3_sign.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/klib/extr_kurl.c_s3_sign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [65 x i8] c"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*)* @s3_sign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s3_sign(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = bitcast i8* %14 to i32*
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @strlen(i8* %16)
  %18 = call i32 @sha1_init_hmac(i32* %12, i32* %15, i32 %17)
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @strlen(i8* %20)
  %22 = call i32 @sha1_write(i32* %12, i8* %19, i32 %21)
  %23 = call i32* @sha1_final_hmac(i32* %12)
  store i32* %23, i32** %8, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  store i32 8, i32* %11, align 4
  br label %24

24:                                               ; preds = %90, %3
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 20
  br i1 %26, label %27, label %93

27:                                               ; preds = %24
  %28 = load i32, i32* %11, align 4
  %29 = icmp sle i32 %28, 6
  br i1 %29, label %30, label %69

30:                                               ; preds = %27
  %31 = load i32, i32* %9, align 4
  %32 = icmp slt i32 %31, 19
  br i1 %32, label %33, label %40

33:                                               ; preds = %30
  %34 = load i32*, i32** %8, align 8
  %35 = load i32, i32* %9, align 4
  %36 = add nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %34, i64 %37
  %39 = load i32, i32* %38, align 4
  br label %41

40:                                               ; preds = %30
  br label %41

41:                                               ; preds = %40, %33
  %42 = phi i32 [ %39, %33 ], [ 0, %40 ]
  store i32 %42, i32* %13, align 4
  %43 = load i8*, i8** %7, align 8
  %44 = load i32*, i32** %8, align 8
  %45 = load i32, i32* %9, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* %11, align 4
  %50 = sub nsw i32 6, %49
  %51 = shl i32 %48, %50
  %52 = and i32 %51, 63
  %53 = load i32, i32* %13, align 4
  %54 = load i32, i32* %11, align 4
  %55 = add nsw i32 %54, 2
  %56 = ashr i32 %53, %55
  %57 = or i32 %52, %56
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %43, i64 %58
  %60 = load i8, i8* %59, align 1
  %61 = load i8*, i8** %6, align 8
  %62 = load i32, i32* %10, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i8, i8* %61, i64 %63
  store i8 %60, i8* %64, align 1
  %65 = load i32, i32* %9, align 4
  %66 = add nsw i32 %65, 1
  store i32 %66, i32* %9, align 4
  %67 = load i32, i32* %11, align 4
  %68 = add nsw i32 %67, 2
  store i32 %68, i32* %11, align 4
  br label %89

69:                                               ; preds = %27
  %70 = load i8*, i8** %7, align 8
  %71 = load i32*, i32** %8, align 8
  %72 = load i32, i32* %9, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i32, i32* %71, i64 %73
  %75 = load i32, i32* %74, align 4
  %76 = load i32, i32* %11, align 4
  %77 = sub nsw i32 %76, 6
  %78 = ashr i32 %75, %77
  %79 = and i32 %78, 63
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds i8, i8* %70, i64 %80
  %82 = load i8, i8* %81, align 1
  %83 = load i8*, i8** %6, align 8
  %84 = load i32, i32* %10, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds i8, i8* %83, i64 %85
  store i8 %82, i8* %86, align 1
  %87 = load i32, i32* %11, align 4
  %88 = sub nsw i32 %87, 6
  store i32 %88, i32* %11, align 4
  br label %89

89:                                               ; preds = %69, %41
  br label %90

90:                                               ; preds = %89
  %91 = load i32, i32* %10, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %10, align 4
  br label %24

93:                                               ; preds = %24
  %94 = load i8*, i8** %6, align 8
  %95 = load i32, i32* %10, align 4
  %96 = add nsw i32 %95, 1
  store i32 %96, i32* %10, align 4
  %97 = sext i32 %95 to i64
  %98 = getelementptr inbounds i8, i8* %94, i64 %97
  store i8 61, i8* %98, align 1
  %99 = load i8*, i8** %6, align 8
  %100 = load i32, i32* %10, align 4
  %101 = sext i32 %100 to i64
  %102 = getelementptr inbounds i8, i8* %99, i64 %101
  store i8 0, i8* %102, align 1
  ret void
}

declare dso_local i32 @sha1_init_hmac(i32*, i32*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @sha1_write(i32*, i8*, i32) #1

declare dso_local i32* @sha1_final_hmac(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
